# text_classifier_extractor

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  STRUCTURE.md
docs/plans/: 2026-02-06-emotional-chat-implementation.md  2026-02-06-emotional-chat-system.md
src/: CLAUDE.md  main.rs
src/agents/: chat.rs  emotion.rs  mod.rs
src/models/: message.rs  mod.rs
src/state/: conversation.rs  mod.rs
src/strategy/: mod.rs  response.rs
