[package]
name = "text_classifier_extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.11.1"
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
schemars = { version = "0.8", features = ["derive"] }
